# SongGeneration-MLX

./: .gitignore  README.md  pyproject.toml
scripts/: convert_lm.py  decode_tokens_official.py  quantize_lm.py  shard_safetensors.py
songgeneration_mlx/: __init__.py  cli.py  model.py
